sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/Inventory_Unit_Price_Change__c.object-meta.xml
<CustomObject>
    <label>Inventory Unit Price Change</label>
    <nameField>
        <displayFormat>IUPC-{0000000000}</displayFormat>
        <label>Inventory Unit Price Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Unit Price Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>