sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>250</length>
    <type>Text</type>
</CustomField>