sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/fields/Current_Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock_Quantity__c</fullName>
    <label>Current Stock Quantity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>