sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/fields/Current_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Unit_Price__c</fullName>
    <label>Current Unit Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>