sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Inventory Unit Price Changes</relationshipLabel>
    <relationshipName>Inventory_Unit_Price_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>