sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/fields/Inventory_Transaction_del__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Transaction_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Transaction</label>
    <referenceTo>Inventory_Transaction__c</referenceTo>
    <relationshipLabel>Inventory Unit Price Changes</relationshipLabel>
    <relationshipName>Inventory_Unit_Price_Changes_del</relationshipName>
    <type>Lookup</type>
</CustomField>