sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/fields/New_Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>New_Stock_Quantity__c</fullName>
    <label>New Stock Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>