sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <label>PO Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>