sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/fields/PO_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PO_Quantity__c</fullName>
    <label>PO Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>