sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/fields/Transaction_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type_del__c</fullName>
    <label>Transaction Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>