sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/fields/Vendor_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Invoice</label>
    <referenceTo>Vendor_Invoice__c</referenceTo>
    <relationshipLabel>Inventory Unit Price Changes</relationshipLabel>
    <relationshipName>Inventory_Unit_Price_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>