sfSandBoxCode/force-app/main/default/objects/Inventory_Unit_Price_Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Inventory_Item__c</columns>
    <columns>Current_Unit_Price__c</columns>
    <columns>New_Unit_Price__c</columns>
    <columns>Current_Stock_Quantity__c</columns>
    <columns>New_Stock_Quantity__c</columns>
    <columns>Transaction_Type_del__c</columns>
    <columns>Comments__c</columns>
    <columns>PO__c</columns>
    <columns>PO_Quantity__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>